# TPU-Demos

./: README.md  job_results.json  pyproject.toml
src/tpu_demos/: __init__.py  cli.py  launcher.py  ui.py
src/tpu_demos/biology/: medical_imaging.py
tests/: test_cli.py
tests/biology/: test_medical_imaging.py
